<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/grad"
    android:id="@+id/rootView"
    tools:context=".Activity.LoginActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin_28"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/water_distribution"
        android:textSize="@dimen/text_size_xlarge"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/activity_margin_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/enterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:layout_margin="@dimen/activity_margin_10"
            android:hint="Enter Username"
            android:textColor="@color/white"
            android:background="@drawable/border_light_white"
            android:padding="@dimen/activity_margin_8"
            android:textColorHint="@color/white_pressed"
            />
        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:layout_margin="@dimen/activity_margin_10"
            android:hint="Password"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:background="@drawable/border_light_white"
            android:padding="@dimen/activity_margin_8"
            android:textColorHint="@color/white_pressed"
            />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_10"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_large"
            android:gravity="center"
            android:textAllCaps="false"
            android:background="@drawable/borderless_button_white"
            android:layout_margin="@dimen/activity_margin_10"
            android:text="Login"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
          <TextView
              android:id="@+id/forgotPassword"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/forgot_password"
              android:textSize="@dimen/text_size_small"
              android:textStyle="bold"
              android:textColor="@color/white"
              android:background="?attr/selectableItemBackgroundBorderless"
              android:clickable="true"
              />
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="|"
              android:gravity="center"
              android:paddingLeft="@dimen/activity_margin_8"
              android:paddingRight="@dimen/activity_margin_8"
              android:textSize="@dimen/text_size_xlarge"
              android:textColor="@color/light_gray"
              />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/light_gray"
                />
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginLeft="@dimen/activity_margin_4"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>