<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="@dimen/activity_margin_10"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:minHeight="@dimen/activity_margin_100"
            android:background="@color/light_gray"
            android:gravity="center"
            >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Select Profile Photo"
    android:textColor="@color/colorPrimary"
    />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/firstName"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/firstNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:hint="@string/enterfirstName"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/lastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/lastName"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/lastNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:hint="@string/enterlastName"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/phone_number"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/phoneEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/gray"
                android:hint="@string/enterphone_number"
                android:textColorHint="@color/gray"
                android:maxLength="10"
                android:inputType="phone"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/addressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="Address 1"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/addressEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/gray"
                android:hint="Enter Address"
                android:textColorHint="@color/gray"
                android:inputType="text"
                android:maxLength="100"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/address2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="Address 2"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/address2Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/gray"
                android:hint="Enter Address"
                android:textColorHint="@color/gray"
                android:inputType="text"
                android:maxLength="100"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/pincodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="Pincode"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/pincodeEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/gray"
                android:hint="Enter Pincode"
                android:textColorHint="@color/gray"
                android:inputType="number"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/email_id"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/gray"
                android:hint="@string/enteremail_id"
                android:textColorHint="@color/gray"
                android:inputType="textEmailAddress"
                />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/distributorCodeLayoutLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/distributorCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="Distributor Code"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <TextView
                android:id="@+id/distributorCodeEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorPrimary"
                android:text="Select Distributor code"
                />
        </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <LinearLayout
            android:id="@+id/employeeRemoveLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <RelativeLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/password"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/gray"
                android:hint="@string/enterpassword"
                android:textColorHint="@color/gray"
                android:inputType="textPassword"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/confirmpasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="Confirm Password"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/confirmpasswordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/gray"
                android:hint="@string/enterpassword"
                android:textColorHint="@color/gray"
                android:inputType="textPassword"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <LinearLayout
            android:id="@+id/customerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <RelativeLayout
            android:id="@+id/productLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="Type of Product"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <TextView
                android:id="@+id/productText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorPrimary"
                android:text="Select Product"
                />
        </RelativeLayout>
        </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>