<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_28"
            android:layout_marginRight="@dimen/activity_margin_28"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_margin_18"
                android:gravity="center"
                android:text="@string/otp_verification"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_xlarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_margin_18"
                android:gravity="center"
                android:text="@string/enter_verification_code"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_18"
                android:layout_marginTop="@dimen/activity_margin_18"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/otp_input1"
                    android:layout_width="@dimen/activity_margin_35"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_light_grey"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="@dimen/activity_margin_8"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/otp_input2"
                    android:layout_width="@dimen/activity_margin_35"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin_8"
                    android:background="@drawable/border_light_grey"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="@dimen/activity_margin_8"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/otp_input3"
                    android:layout_width="@dimen/activity_margin_35"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin_8"
                    android:background="@drawable/border_light_grey"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="@dimen/activity_margin_8"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/otp_input4"
                    android:layout_width="@dimen/activity_margin_35"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin_8"
                    android:background="@drawable/border_light_grey"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="@dimen/activity_margin_8"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <Button
                android:id="@+id/verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin_10"
                android:background="@drawable/borderless_button"
                android:gravity="center"
                android:padding="@dimen/activity_margin_10"
                android:text="Verify"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_large" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin_28"
                    android:layout_marginRight="@dimen/activity_margin_28"
                    android:gravity="center"
                    android:text="@string/by_tapping_verify"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_xsmall" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="@dimen/activity_margin_48"
                android:layout_centerInParent="true"
                android:background="@drawable/dotted_line"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_6"
                android:layout_marginTop="@dimen/activity_margin_48"
                android:text="Resend Code"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>